# Magma

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md
engine/: CMakeLists.txt
engine/include/Magma/Core/: Config.hpp  Entry.hpp  Exception.hpp  Parameters.hpp
engine/src/Core/: Config.cpp  Entry.cpp  Parameters.cpp
examples/Framework-CPP/: CMakeLists.txt
examples/Framework-CPP/Audio/: Render-Device-1.cpp
examples/Framework-CPP/Memory/: Stack-Allocator-1.cpp
examples/Framework-CPP/String/: Streams-1.cpp  String-Stream-1.cpp
framework/: CMakeLists.txt
framework/include/Magma/Framework/: Entry.h  Entry.hpp  Error.h  Exception.hpp
framework/src/: Entry.c  Entry.cpp  ErrorString.c  Exception.cpp
framework/src/Audio/: ErrorString.c  OALRenderDevice.c  RenderDevice.c  RenderDevice.cpp  WAVLoader.c
framework/src/File/: ErrorString.c  FileSystem.c  FileSystem.cpp  FolderArchive.c  FolderArchive.cpp  Path.c
framework/src/Graphics/: ErrorString.c  TextureLoader.c
framework/src/Graphics/2.X/: Bytecode.c  Bytecode.cpp  D3D11Assembler.c  D3D11RenderDevice.c  OGL4Assembler.c  OGL4RenderDevice.c  RenderDevice.c  RenderDevice.cpp
framework/src/Input/: D3DWindow.c  ErrorString.c  OGLWindow.c  Window.c  Window.cpp
framework/src/Memory/: Allocator.c  Allocator.cpp  Deflate.c  Endianness.c  ErrorString.c  Handle.cpp  Inflate.c  LinearAllocator.c  LinearAllocator.cpp  Object.c  PoolAllocator.c  PoolAllocator.cpp  StackAllocator.c  StackAllocator.cpp
framework/src/String/: Conversion.c  ErrorString.c  Stream.c  Stream.cpp  StringStream.c  StringStream.cpp  UTF32.c  UTF32.cpp  UTF8.c  UTF8.cpp
framework/src/Thread/: Atomic.c  Atomic.cpp  ErrorString.c  Mutex.c  Mutex.cpp  Thread.c  Thread.cpp
framework/src/VM/: ErrorString.c  VirtualMachine.c
framework/src/VM/Compiler/: Language.bnf
src/Examples/Example-10/: CMakeLists.txt  Main.cpp
src/Examples/Example-11/: CMakeLists.txt  Main.cpp
src/Examples/Example-4/: CMakeLists.txt  Main.cpp
src/Examples/Example-6/: CMakeLists.txt  Main.cpp
src/Examples/Framework/: CMakeLists.txt
src/Examples/Framework-C/: CMakeLists.txt
src/Examples/Framework-C/File/: Archive.c  FileSystem.c  Path.c
src/Examples/Framework-C/Files/: Archive.c  Path.c
src/Examples/Framework-C/Graphics/: RenderDevice-1.c
src/Examples/Framework-C/Input/: D3D-Window.c  OGLWindow.c
src/Examples/Framework-C/Memory/: Aligned.c  PoolAllocator-1.c
src/Examples/Framework-C/String/: Conversion-1.c  Streams-1.c
src/Examples/Framework-C/Thread/: Thread-1.c
src/Examples/Framework-C/VM/: Bytecode-1.c  Compiler-1.c
src/Examples/Framework-CPP/: CMakeLists.txt
src/Examples/Framework-CPP/Audio/: Render-Device-1.cpp
src/Examples/Framework-CPP/File/: FileSystem.cpp
src/Examples/Framework-CPP/Graphics/: Render-Device-1.cpp
src/Examples/Framework-CPP/Input/: Window-1.cpp
src/Examples/Framework-CPP/Memory/: Stack-Allocator-1.cpp
src/Examples/Framework-CPP/String/: Streams-1.cpp  String-Stream-1.cpp
src/Examples/Framework-CPP/Thread/: Thread-1.cpp
src/Examples/Framework/Example-1/: CMakeLists.txt  Main.cpp
src/Examples/Framework/Example-2/: CMakeLists.txt  Main.cpp
src/Examples/Framework/Example-3/: CMakeLists.txt  Main.cpp
src/Examples/Framework/Example-4/: CMakeLists.txt  Main.cpp
src/Examples/Framework/Example-5/: CMakeLists.txt  Main.cpp
src/Examples/Framework/Example-6/: CMakeLists.txt  Main.cpp
src/Examples/Framework/Example-7/: CMakeLists.txt  Main.cpp
src/Examples/Framework/Example-8/: CMakeLists.txt  Main.cpp
src/Examples/Framework/Example-9/: CMakeLists.txt  Main.cpp
src/Examples/Framework/Example-C-1/: CMakeLists.txt  Main.c  Main.cpp
src/Examples/Framework/Example-C-2/: CMakeLists.txt  Main.c  Main.cpp
src/Examples/Framework/Example-C-3/: CMakeLists.txt  Main.c
src/Examples/Framework/Example-C-4/: CMakeLists.txt  Main.c
src/Examples/Framework/Example-C-5/: CMakeLists.txt  Main.c
src/Examples/Framework/Example-C-6/: CMakeLists.txt  Main.c
src/Examples/Framework/Example-CPP-1/: Main.cpp
src/Examples/Framework/Example-CPP-2/: Main.cpp
src/Examples/Framework/Example-CPP-3/: Main.cpp
src/Magma/Engine/Core/: CMakeLists.txt  Entry.cpp
src/Magma/Framework/: CMakeLists.txt  Config.h.in  Config.hpp.in  Entry.c  Entry.cpp  Entry.h  Entry.hpp  ErrorString.c  ErrorString.h
src/Magma/Framework/Audio/: Error.h  ErrorString.c  Exception.hpp  OALRenderDevice.c  OALRenderDevice.cpp  OALRenderDevice.h  OALRenderDevice.hpp  RenderDevice.c  RenderDevice.cpp  RenderDevice.h  RenderDevice.hpp  WAVLoader.c  WAVLoader.cpp  WAVLoader.hpp
src/Magma/Framework/File/: Archive.c  Archive.h  DefaultArchive.c  DefaultArchive.h  Error.h  ErrorString.c  Exception.hpp  FileSystem.c  FileSystem.cpp  FileSystem.h  FileSystem.hpp  FolderArchive.c  FolderArchive.cpp  FolderArchive.h  FolderArchive.hpp  Path.c  Path.cpp  Path.h  Path.hpp  STDFileSystem.cpp  STDFileSystem.hpp
src/Magma/Framework/Files/: DefaultArchive.c  ErrorString.h  Exception.hpp  FileSystem.hpp  Path.cpp  Path.hpp  STDFileSystem.cpp  STDFileSystem.hpp
src/Magma/Framework/Graphics/: Bytecode.c  Bytecode.h  BytecodeAssembler.cpp  BytecodeAssembler.hpp  Context.hpp  D3D11Assembler.c  D3D11Assembler.cpp  D3D11Assembler.h  D3D11Assembler.hpp  D3D11Context.cpp  D3D11Context.hpp  D3D11RenderDevice.c  D3D11RenderDevice.cpp  D3D11RenderDevice.h  D3D11RenderDevice.hpp  Error.h  ErrorString.c  ErrorString.h  Exception.hpp  Font.cpp  Font.hpp  GLContext.cpp  GLContext.hpp  MFXToGLSL.cpp  (+40 more)
src/Magma/GUI/: BoundingBox.hpp  BoxElement.hpp  CMakeLists.txt  Element.cpp  Element.hpp  ElementRenderer.cpp  ElementRenderer.hpp  Exception.hpp  Input.cpp  Input.hpp  Renderer.cpp  Renderer.hpp  Root.cpp  Root.hpp
src/Magma/Resources/: AudioStream.cpp  AudioStream.hpp  CMakeLists.txt  Exception.hpp  Font.cpp  Font.hpp  Importer.cpp  Importer.hpp  Manager.cpp  Manager.hpp  Resource.cpp  Resource.hpp  Shader.cpp  Shader.hpp
src/Tests/Framework-C/: CMakeLists.txt
src/Tetris/: CMakeLists.txt  Main.cpp
tests/Framework-CPP/: CMakeLists.txt
(+400 files in other folders)
