# ./src/Examples/Framework/CMakeLists.txt

add_subdirectory(Example-1/)
add_subdirectory(Example-2/)
add_subdirectory(Example-3/)
add_subdirectory(Example-4/)
add_subdirectory(Example-5/)
add_subdirectory(Example-6/)
add_subdirectory(Example-7/)
add_subdirectory(Example-8/)
add_subdirectory(Example-9/)

add_subdirectory(Example-C-1/)
add_subdirectory(Example-C-2/)
add_subdirectory(Example-C-3/)
